--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,34 +1,154 @@
+body {
+    background: #f5f5f5;
+    color: #333;
+}
+
+h3 {
+    color: #333;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 1.5;
+    margin: 0;
+    overflow: hidden;
+    padding: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+#main {
+    background-color: white;
+    margin: 0 auto;
+    width: 80%;
+    height: 100%;
+    float: center;
+}
+
+label {
+    display: inline-block;
+    font-family: Arial,sans-serif;
+    font-size: 16px;
+    color: #707070;
+    text-align: right;
+    width: 100px;
+    border: 1px solid #ccc;
+    vertical-align: middle;
+}
+
+textarea {
+    width: 85%;
+    height: 34px;
+    vertical-align: middle;
+    margin: 3px 0px 3px 5px;
+}
+
+div {
+    margin-bottom: 5px;
+    text-align: center;
+}
+
+#text_title {
+    background-color: gray;
+}
+
+#text_replay {
+    background-color: blue;
+    height: 120px;
+}
+
+#text_expectation{
+    background-color: #1aaaaa;
+}
+
+#text_charts {
+    background-color: #111ccc;
+}
+
+#text_invinfo {
+    background-color: #555aaa;
+    text-align: left;
+}
+
+#choose_invinfo {
+
+}
+
+#print_title {
+    background-color: #666ccc;
+    text-align: center;
+}
+
+#print_describle {
+    background-color: #888ddd;
+    height: 200px;
+}
+
+
+
+
+#b_replay {
+    height: 104px;
+}
+
+#bug_result_describle {
+    height: 190px;
+}
+
+footer {
+    height:auto;
+    text-align: center;
+    font-size: 12px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
 body, html {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    position: relative;
 }
 #main {
     width: 100%;
     height: 80%;
-    /*border: 1px solid red;*/
-    position: relative;
 }
 
 #index_left {
-    width: 49.5%;
+    margin: 0 auto;
+    width: 75%;
     border: solid 1px blue;
-    position: absolute;
-    top:0;
-    left: 0;
+    float: center;
 }
 
 #index_right {
-    width: 49.5%;
-    border: 1px solid blue;
-    position: absolute;
-    top: 0;
-    right: 0;
+    margin: 0 auto;
+    width: 80%;
+    border: solid 1px blue;
+    float: center;
+}
+#index_bottom {
+    width: 100%; 
+    border:2px solid #00f;
+    float: left;
 }
 
-#links {
-    border: 1px solid blue;
-    float: left;
+h3 {
+    text-align: center;
+    color: blue;
+    letter-spacing: 8px;
+    height: 10px;
+    padding-top: 0;
+    margin-top: 0;
 }
 textarea {
     margin: 0 auto;
@@ -51,6 +171,7 @@ span {
 }
 
 /*链接样式*/
+
 a {
     margin:0 10px;
     text-decoration: none;
@@ -59,13 +180,13 @@ a:link {color:blue;}		/* 未被访问的链接 */
 a:visited {color:#808040;}	/* 已被访问的链接 */
 a:hover {color:green;}	/* 鼠标指针移动到链接上 */
 a:active {color:#0000FF;}	/* 正在被点击的链接 */
-
+/*
 button {
     border-radius: 3px;
 }
 
 footer {
-    position:absolute;
+    position: absolute;
     bottom:0;
     width:99%;
     height:auto;
@@ -101,16 +222,25 @@ footer {
     height: 180px;
     width: 99%;
     float: center;
+    position: relative;
 }
 
 #interactive {
     width: 80%;
 }
-#specially {
-    width: 50%;
+#especially {
+    width: 80%;
 }
 
 #createbug {
     color: #fff;
     background-color: #0092ff;
 }
+
+#control {
+    float: right;
+    bottom: 0; 
+    right:0;
+    z-index:99;
+}
+*/
